# focused-adaptation-dynamics

./: .gitignore  README.md
analysis/scripts/: analyze_ift_results.py  analyze_online_learning.py  analyze_online_results.py  analyze_planning_results.py  analyze_post_learning_results.py  analyze_real_val_ift_results.py  count_transitions_in_online_learning.py  data_weight_distribution_over_training.py  known_good_model_error.py  make_learning_progress_video.py  online_dts.py  online_learning_video.py  pandas_seaborn_demo.py  plot_soft_mask_curves.py  post_learning_video.py  real_robot_results_plot.py  status.py
arm_moveit/: CMakeLists.txt  package.xml
arm_moveit/include/arm_moveit/: rope_reset_planner.h
arm_moveit/robot_points_data/val/: robot_points.pkl
arm_moveit/scripts/: ompl_demo.py  test_dumb_planning.py  test_plan_to_poses.py  test_rope_reset_planner.py  test_rope_reset_planner_real.py
arm_moveit/src/: bindings.cpp  rope_reset_planner.cpp  rope_reset_planner_bindings.cpp  test_rope_reset_planner.cpp
dm_envs/: car1.xml  empty.xml  val_husky_no_gripper_collisions.urdf  val_husky_no_gripper_collisions.xml
dm_envs/scripts/: my_viewer.py
dynamics_adaptation/scripts/: add_meta_mask.py
link_bot_classifiers/scripts/: merge_classifier_datasets.py
link_bot_data/collect_dynamics_params/: alt_rope_100.hjson  floating_rope.hjson  floating_rope_100.hjson  floating_rope_100_moved.hjson  mj_floating_rope.hjson  mj_val_rope_alt.hjson  val_car_alt_100.hjson  water.hjson
link_bot_data/scripts/: collect_dynamics_data.py  count_transitions.py  count_transitions_with_collision.py  modify_dataset.py  split_dataset.py  visualize_dynamics_dataset.py
link_bot_gazebo/: custom_rosconsole.conf
link_bot_gazebo/launch/: no_sim_viz.launch  real_val.launch  robot_in_gazebo.launch  val.launch
link_bot_gazebo/scripts/: suspend_resume_gazebo.py  test_occupancy_service.py
link_bot_gazebo/worlds/: car5_alt.world  car5_real.world  dual_floating_grippers.world  rope.world
link_bot_perception/: custom_rosconsole.conf  gripper_info.yaml
link_bot_perception/launch/: aruco_detect.launch  rope_tracking.launch  tracking_tripodA_and_victor_head.launch
link_bot_perception/pcd_files/: car5_real_blender.stl
link_bot_perception/scripts/: constant_mocap.py  rope_endpoint_tf.py
link_bot_perception/src/: merge_pointclouds.cpp
(+227 files in other folders)
